exports[`Image React component Renders Alternate correctly 1`] = `
<img
  alt="Brain"
  className="image border center round"
  onClick={[Function]}
  src="brain.png"
  title="Brain" />
`;

exports[`Image React component Renders Default correctly 1`] = `
<img
  alt="Brain"
  className="image shadow"
  onClick={[Function]}
  src="brain.png"
  title="Brain" />
`;

exports[`Image React component Renders Responsive Max-width 100% correctly 1`] = `
<img
  alt="Brain"
  className="image mw shadow"
  onClick={[Function]}
  src="brain.png"
  title="Brain" />
`;

exports[`Image React component Renders Responsive Width 100% correctly 1`] = `
<img
  alt="Brain"
  className="image w shadow"
  onClick={[Function]}
  src="brain.png"
  title="Brain" />
`;
